<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">App1</string>
    <string name="enter_your_name_below">Enter your name below…</string>
    <string name="receiveName">TextView</string>
    <string name="string_textview" />
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="Proceed">Continue</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="type_name">Type name</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="explore_spain">Explore Spain</string>
    <string name="learn_spanish">Learn Spanish</string>
    <string name="receiveName2">TextView</string>
    <string name="where_in_spain_would_you_like_to_travel">where in Spain would you like to travel?</string>
    <string name="barcelona">Barcelona</string>
    <string name="madrid">Madrid</string>
    <string name="seville">Seville</string>
    <string name="palma_de_mallorca">Palma de Mallorca</string>
    <string name="granada">Granada</string>
    <string name="other" tools:ignore="DuplicateDefinition">Other</string>
    <string name="explore">EXPLORE</string>
    <string name="where_would_you_like_to_travel">Where would you like to travel?</string>
    <string name="barc">Barcelona</string>
    <string name="barcelona_description">Barcelona is the country’s second city but it is Spain’s most popular destination for international visitors. It is a laid-back city which offers stunning coastlines combined with a wide range of things to see and do.
        The city is synonymous with Antoni Gaudí, the architect whose other-worldly structures attract millions of visitors each year. The Sagrada Familia is the most famous and most extravagant and no one should miss a chance to visit the jaw-dropping church.
        Other highlights include the Fundación de Joan Miro, Camp Nou (Barcelona F.C.’s stadium), Montjuic, and the Picasso Museum.
    </string>
    <string name="our_hotel_recommendation">Our hotel recommendation</string>
    <string name="bacelona_hotel_description">The essence of luxury travel, this sumptuous five-star hotel is ideally located right in the heart of Barcelona and connects guests with the very best of the city’s cultural charms. Seamless service paired with
        a wealth of refined dining and leisure facilities makes for a thoroughly indulgent stay.</string>
    <string name="almanac_barcelona">Almanac Barcelona</string>
    <string name="barcelonaone">barcelonaone</string>
    <string name="location">location</string>
    <string name="website">website</string>
    <string name="arrow" />
    <string name="call">call</string>
    <string name="madrid_description">Madrid actually receives more visitors per year than Barcelona, however, Spain’s capital receives fewer foreign visitors. The city is famous for its world-class museums, such as the El Prado Museum as well as one of
        the liveliest nightlife scenes in the world. Some of the other bets sights to see include the Retiro Park, the Royal Palace and Gardens, Plaza Mayor (the capital’s main square), and the Temple of Debod. Madrid may not have a beach like Barcelona
        but it makes up for it with its abundance of cultural points of interest.
    </string>
    <string name="madrid_hotel_description">The Gran Hotel Inglés brings a whole new level of luxury to the Madrid hotel scene, with stylish Art Deco design, sumptuous rooms, a quietly excellent restaurant and a superb spa. Although it is right in the
        middle of the city, the clubby vibe means you may well not want to move from the lobby bar.
    </string>
    <string name="madrid_one">Madrid</string>
    <string name="gran_hotel_ingles">Gran Hotel Ingles</string>
    <string name="seville_description">Seville is the capital of Spain’s southern Andalusia region and it is famous for sunny weather, flamenco dancing, and a some of Spain’s most historical landmarks. These include the exquisite Alcazar Castle complex
        (built during the Moorish Almohad dynasty) and the Gothic Seville Cathedral where Christopher Columbus’ tomb lies.
        The city’s streets and squares and lively and atmospheric as are the bars and restaurants (it is one of the best places in the country for tapas). There are also some sensational museums, art exhibitions, theatres, and theme parks, so there really I something for everyone.
    </string>
    <string name="seville_hotel_description">So discreet it doesn\'t even have a sign, this restored 17th-century mansion hidden down a tiny alley in Santa Cruz offers service worthy of a five-star establishment, plus nightly live guitar performances,
        a superbly stocked bar, and a large roof terrace with cathedral views.
    </string>
    <string name="sev">Seville</string>
    <string name="palma_description">If you are looking for sun, sea, and sand, Palma de Mallorca is the perfect location. The beaches are the main attraction, and they are magnificent, but the city also has some other landmarks worth visiting such as the Royal Palace of la Almudena and the cathedral.
        Palma is the capital of the island of Mallorca, situated in the Balearic Sea. From Palma you can explore the rest of the island easily and also visit the neighboring Menorca which is also very beautiful.
    </string>
    <string name="palma_hotel_description">This skilfully renovated, 19th-century mansion and boutique five-star is situated in the Capital\'s atmospheric historic quarter. It is a peaceful refuge, and has a spectacular rooftop pool and gastronomic restaurant.
        The city\'s leading attractions, including galleries, cafés and shops, can all be reached on foot.
    </string>
    <string name="palm">Palma de Mallorca</string>
    <string name="sant_francesc_hotel_singular">Sant Francesc Hotel Singular</string>
    <string name="granada_description">Granada is in Spain’s southern Andalusia region and sits in the foothills of the Sierra Nevada mountains. The city is famous for its stunning medieval architecture which dates back to the Moorish occupation, the most famous example is the Alhambra.
        The city is also renowned for its electric atmosphere. The streets are packed with tapas bars, restaurants, bohemian cafes, and flamenco clubs. It has one of the biggest student populations in the country, as well as being one of the most visited places, which makes it a truly special place.
    </string>
    <string name="granada_hotel_description">Gar-Anat is a glossy, charismatic boutique hotel tucked into a sleekly converted 16th-century building, and inspired by literary greats of Andalucía’s past. It\’s a fabulous find for its warm welcome, creative, individually styled rooms
        (at reasonable rates), and handily central location.
    </string>
    <string name="gran">Granada</string>
    <string name="gar_anat">Gar-Anat</string>
    <string name="tenerife_description">Tenerife, the largest of the seven Spanish Canary Islands off the west coast of Africa, might bring to mind package holidays and beaches, but there is actually so much more to see here. Away from the coast and the tourist hotspots the landscape is otherworldly,
        with volcanic peaks – Mount Teide is the highest peak in Spain – where you can explore the craters and ancient lava flows.
    </string>
    <string name="alicante_description">Sun, sea and a soaring rocky peak make Alicante a prime coastal destination. Many foreign tourists fly into the airport, then head straight out to resorts further along the coast – but they are missing out, because Alicante is worth exploring in itself. The port city has a lively beach,
        with Mount Benacantil as a backdrop; Santa Bárbara Castle, dating back to the ninth century, sits at the top. Stroll by the marina in the evening before checking out the tapas bars in the old town.
    </string>
    <string name="sebastian_description">This elegant city, on the coast in the Basque Country, is a must for foodies. The pintxo – a Basque version of tapas that usually includes delicious morsels balanced on crusty bread – is the local gastronomic calling card, and the bars of the Old Town lay theirs out on the bar tops so
        you can see everything on offer. Concha Beach is a beautiful, shell-shaped cove popular with families, while the nearby Zurriola Beach is great for surfing.
    </string>
    <string name="cordoba_description">Cordoba was the most important city during the Moorish rule of Spain in the Middle Ages, and it was home to the Mezquita, the vast Islamic mosque built from the eighth to the 10th centuries. After the Reconquista in the 13th century, part of the mosque, rather than being demolished,
        was converted into a cathedral, but much of it retains the original Islamic design. Cordoba Old Town, a Unesco World Heritage Site, is home to a Roman bridge, charming cobbled streets and some fascinating pieces of architecture..
    </string>
    <string name="valencia_description">Where better than the birthplace of paella to sample the most famous dish to come from Spain? Head to a beach-side restaurant for lunch – Spaniards tend not to eat paella at dinner as it’s quite a heavy meal – and wash it down with agua de Valencia, a potent cava-based cocktail.
        Explore Valencia old town and don\’t miss the incredible, spaceship-like Valencia City of Arts and Sciences. it’s a futuristic complex in what was a riverbed that holds an aquarium, Imax cinema, opera house and science museum.
    </string>
    <string name="tenerife">Tenerife</string>
    <string name="more_places_to_visit">More places to visit</string>
    <string name="suggestions">If you need more options on where to travel to in Spain or you have already seen the most famous cities, we\'ve got you covered! Here are a few suggestions:</string>
    <string name="alicante">Alicante</string>
    <string name="more_places_to_visit_spain">More places to visit in Spain</string>
    <string name="san_sebastian">San Sebastian</string>
    <string name="cordoba">Cordoba</string>
    <string name="tengo_20_a_os">Tengo 20 años</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="c_mo_est_s">¿Cómo estás?</string>
    <string name="see_you_later">See you later</string>
    <string name="buenas_noches">Buenas noches</string>
    <string name="good_evening_night">Good evening/night</string>
    <string name="buenas_tardes">Buenas tardes</string>
    <string name="c_mo_te_llamas">¿Cómo te llamas?</string>
    <string name="goodbye">Goodbye</string>
    <string name="buenos_d_as">Buenos días</string>
    <string name="greetings_saludos">Greetings/Saludos</string>
    <string name="i_m_pleased_to_meet_you">I\'m pleased to meet you</string>
    <string name="good_morning">Good morning</string>
    <string name="hola">Hola</string>
    <string name="hasta_luego">Hasta luego</string>
    <string name="cu_ntos_a_os_tienes">¿Cuántos años tienes?</string>
    <string name="adi_s">Adiós</string>
    <string name="encantado_de_conocerte">Encantado de conocerte</string>
    <string name="thank_you_for_using">Thank you for using</string>
    <string name="spaniscape" tools:ignore="DuplicateDefinition">Spaniscape</string>
    <string name="rate">rate</string>
    <string name="stefana_chiritescu_2022">© Stefana Chiritescu 2022</string>
    <string name="interesting">Interesting</string>
    <string name="easy_to_navigate">Easy to navigate</string>
    <string name="you_described_our_app_as">You described our app as</string>
    <string name="boring">Boring</string>
    <string name="fun">Fun</string>
    <string name="please_take">Please take a moment to explain why you chose these words…</string>
    <string name="send">send</string>
    <string name="how_would_you_describe_our_app">How would you describe our app?</string>
</resources>