<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:gravity="center"
        android:text="@string/thank_you_for_using"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/spaniscape"
        android:textColor="#DF2B2B"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/how_would_you_describe_our_app"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="140sp"
        android:buttonTint="#F6E870"
        android:text="@string/interesting"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:buttonTint="#F6E870"
        android:text="@string/fun"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:buttonTint="#F6E870"
        android:text="@string/easy_to_navigate"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:buttonTint="#F6E870"
        android:text="@string/boring"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:buttonTint="#F6E870"
        android:text="@string/other"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="120sp"
        android:backgroundTint="#FFC107"
        android:text="@string/rate"
        app:cornerRadius="20sp"
        tools:ignore="UsingOnClickInXml,TextContrastCheck" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:text="@string/stefana_chiritescu_2022"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck" />

</LinearLayout>