<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".ReviewActivity">

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="10sp"
        android:text="@string/you_described_our_app_as"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/rv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:text="@string/interesting"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/rv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="@string/fun"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/rv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="@string/easy_to_navigate"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/rv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="@string/boring"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/rv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="@string/other"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp"
        android:text="@string/please_take"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textBox"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:background="#94FFFFFF"
            android:textAlignment="viewStart"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="140sp"
        android:backgroundTint="#FAC424"
        android:onClick="goDeleteText"
        android:text="@string/send"
        app:cornerRadius="20sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>