<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ombre"
    android:orientation="vertical"
    tools:context=".GranadaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/barcelonaone"
            android:tag="1"
            app:srcCompat="@drawable/granadaone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/arrow"
                android:onClick="goLeftVector"
                app:srcCompat="@drawable/left"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

            <ImageButton
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00C60000"
                android:contentDescription="@string/arrow"
                android:onClick="goRightVector"
                app:srcCompat="@drawable/right"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gran"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/granada_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/our_hotel_recommendation"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/gar_anat"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/granada_hotel_description"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="40sp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF9800"
                    android:text="@string/location"
                    app:cornerRadius="10sp"
                    tools:ignore="ButtonStyle,TextContrastCheck" />

                <Button
                    android:id="@+id/btnWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="40sp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF9800"
                    android:text="@string/website"
                    app:cornerRadius="10sp"
                    tools:ignore="ButtonStyle,TextContrastCheck" />

                <Button
                    android:id="@+id/btnCall"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="40sp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF9800"
                    android:text="@string/call"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="10sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>