<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/receiveName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140sp"
        android:gravity="center"
        android:text="@string/string_textview"
        android:textColor="#FAFAFA"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/what_would_you_like_to_do"
        android:textColor="#E1E1E1"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnExplore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="100sp"
        android:layout_marginRight="100sp"
        android:backgroundTint="#F8AE40"
        android:onClick="goAboutActivity"
        android:text="@string/explore_spain"
        app:cornerRadius="20sp"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnLearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="100sp"
        android:backgroundTint="#F8AE40"
        android:onClick="goLearnActivity"
        android:text="@string/learn_spanish"
        app:cornerRadius="20sp"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />

</LinearLayout>